Added Dual kit in hiv testing - initial,confirmatory,mchms anc,delivery and postnatal

--- a/omod/src/main/webapp/resources/htmlforms/hts/htsInitialTest.html
+++ b/omod/src/main/webapp/resources/htmlforms/hts/htsInitialTest.html
@@ -56,6 +56,37 @@
                 getField('hts-entry-point.value').prop("selectedIndex", 8);
             }
         }
+
+        var kit1Selected = function () {
+            var val = jq(this).val();
+            if (val == 165351 ){   //Dual kit selected
+                jq('#dual-results-1').show();
+                $("#kit-name-2 option[value='164961']").add();
+                $("#kit-name-2 option[value='164960']").remove();
+                $("#kit-name-2 option[value='165351']").remove();
+            }
+
+            if (val == 164960 ){   //Determine kit selected
+                jq('#dual-results-1').hide();
+                $("#kit-name-2 option[value='164961']").add();
+                $("#kit-name-2 option[value='164960']").remove();
+                $("#kit-name-2 option[value='165351']").remove();
+            }
+            if (val == 164961 ){   //Determine kit selected
+                jq('#dual-results-1').hide();
+                $("#kit-name-2 option[value='164960']").add();
+                $("#kit-name-2 option[value='165351']").add();
+                $("#kit-name-2 option[value='164961']").remove();
+            }
+        }
+        var kit2Selected = function () {
+            var val = jq(this).val();
+            if (val == 165351 ){   //Dual kit selected
+                jq('#dual-results-2').show();
+            }else{
+                jq('#dual-results-2').hide();
+            }
+        }
         var prevTestSelected = function () {
             var val = jq(this).val();
             if (val == 1065 ){
@@ -252,6 +283,7 @@
             jq('#ever-tested input').change(prevTestSelected);
             //strategy selected
             jq('.hts-strategy select').change(strategySelected);
+
             var htsStrategySelected = getField('strategy.value').val();
                 if (htsStrategySelected == 159938 ){
                     getField('hts-entry-point.value').prop("selectedIndex", 9);
@@ -266,6 +298,10 @@
             //couple testing
             jq("#couple-testing input").change(coupleTestedAction);
             //hiv test123    hide second test by default
+            //kit selected
+            jq('#kit-name-1 select').change(kit1Selected);
+            jq('#kit-name-2 select').change(kit2Selected);
+
             jq("#hiv-test2").hide();
             jq('#hiv-final-result select').attr("style", "pointer-events:none;");
             jq("#hiv-test1-result select").change(firstTestSelected);
@@ -509,6 +545,34 @@
                                     jq("#priority-population").show();
                                     jq("#key-population").hide();
                                 }
+
+                                //show syphilis results if they exist
+                               var testKit1 = getField('kit-name-1.value').val();
+                                if (testKit1 == 165351 ){   //Dual kit selected
+                                    jq('#dual-results-1').show();
+                                    $("#kit-name-2 option[value='164961']").add();
+                                    $("#kit-name-2 option[value='164960']").remove();
+                                    $("#kit-name-2 option[value='165351']").remove();
+                                }
+
+                                if (testKit1 == 164960 ){   //Determine kit selected
+                                    $("#kit-name-2 option[value='164961']").add();
+                                    $("#kit-name-2 option[value='164960']").remove();
+                                    $("#kit-name-2 option[value='165351']").remove();
+                                }
+                                if (testKit1 == 164961 ){   //Determine kit selected
+                                    $("#kit-name-2 option[value='164960']").add();
+                                    $("#kit-name-2 option[value='165351']").add();
+                                    $("#kit-name-2 option[value='164961']").remove();
+                                }
+                                var syphylisTest1Results = getField("syphilis-test-results-1.value").val();
+                                var syphylisTest2Results = getField("syphilis-test-results-2.value").val();
+                                if(syphylisTest1Results != ""){
+                                    jq('#dual-results-1').show();
+                                }
+                                if(syphylisTest2Results != ""){
+                                    jq('#dual-results-2').show();
+                                }
                             });
                         </script>
                     </ifMode>
@@ -691,7 +755,6 @@
                                  answerConceptIds="164960,164961,165351"
                                  style="dropdown" answerLabels="Determine,First Response,Dual Kit"
                             />
-
                         </td>
                         <td>&#160;&#160;&#160;&#160;Lot Number
                             <obs
@@ -699,11 +762,18 @@
                                  id="lot-number-1"
                                  conceptId="164964"
                             />
-
                         </td>
                         <td>&#160;&#160;&#160;&#160;Expiry Date
                             <obs id="expiry-date" conceptId="162502AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" allowFutureDates="true"
                             />
+                        </td>
+                        <td>
+                        <div id="dual-results-1" style="display:none;" >&#160;&#160;&#160;&#160; Syphilis Results
+                            <obs conceptId="299AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                                 id="syphilis-test-results-1"
+                                 answerConceptIds="1229AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1228AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                                 answerLabels="Negative,Positive"/>
+                        </div>
                         </td>
                     </tr>
                 </obsgroup>
@@ -734,6 +804,14 @@
                         <td>&#160;&#160;&#160;&#160;Expiry Date
                             <obs id="expiry-date2" conceptId="162502AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" allowFutureDates="true"
                             />
+                        </td>
+                        <td>
+                            <div id="dual-results-2" style="display:none;" >&#160;&#160;&#160;&#160; Syphilis Results
+                                <obs conceptId="299AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                                     id="syphilis-test-results-2"
+                                     answerConceptIds="1229AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1228AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
+                                     answerLabels="Negative,Positive"/>
+                            </div>
                         </td>
                     </tr>
                 </obsgroup>
