--- a/omod/src/main/webapp/resources/htmlforms/ipt/iptOutcome.html
+++ b/omod/src/main/webapp/resources/htmlforms/ipt/iptOutcome.html
@@ -22,16 +22,12 @@
 	</div>
 	<div class="ke-form-content">
 		<fieldset>
-			<legend>IPT Outcome</legend>
+			<legend>Discontinue IPT</legend>
 
 			<table>
 				<tr>
-					<td>Event:</td>
-					<td><obs conceptId="160433AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="1267AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,5240AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159836AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160034AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA, 159492AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="dropdown" labelText=""  showDate="true"/></td>
-				</tr>
-				<tr>
-					<td>Reason for discontinuation</td>
-					<td><obs conceptId="1266AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="102AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,112141AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,5622AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="dropdown" labelText="" /></td>
+					<td>Reason for discontinuation:</td>
+					<td><obs conceptId="161555AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerConceptIds="1267AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,5240AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159836AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,160034AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA, 159492AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA, 112141AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA, 102AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" answerLabels="Completed, Lost to followup, Discontinued, Died, Transferred Out, TB infected, Drug toxicity" style="dropdown" labelText=""  showDate="true"/></td>
 				</tr>
 			</table>
 		</fieldset>
